# valence-tendermintx

./: .env  Cargo.toml  README.md
src/: consts.rs  input.rs  main.rs  utils.rs
src/types/: conversion.rs  types.rs
src/verification/: mod.rs  tree.rs  verification.rs
