[package]
name = "valence-tendermintx"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
tendermint = "0.38.1"
tendermint-proto = "0.38.1"
sha2 = "0.10"
serde = "1"
serde_json = "1"
subtle-encoding = "0.5.1"
dotenv = "0.15"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
hex = "0.4"
ed25519-dalek = "1.0.1"

[features]
local-tests = []
